# SONATAM

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
01_dataset/: __init__.py  harmonic_analyzer.py  linker.py  msd_reader.py
01_dataset/notebooks/: 01_dataset_exploration.ipynb
02_knowledge_graph/: __init__.py  builder.py  queries.py  schema.py
02_knowledge_graph/notebooks/: 02_kg_construction.ipynb
03_deep_learning/: __init__.py  dataset.py  evaluate.py  train.py
03_deep_learning/models/: __init__.py  genre_classifier.py  sequence_model.py
03_deep_learning/notebooks/: 03_model_training.ipynb
04_generation/: __init__.py  midi_writer.py  musicxml_writer.py
04_generation/notebooks/: 04_generation.ipynb
config/: config.py  config.yaml
notebooks/: 00-explore-msd.ipynb  01-explore-msd.ipynb  01-feature-extraction-selection.ipynb  01-feature-extraction.ipynb  02-kg-construction.ipynb  02-kg-prototyping.ipynb  03-graph-learning.ipynb  03-model-training.ipynb  04-audio-inference.ipynb  04-generation.ipynb
scripts/: build_dataset.py  build_kg.py  download_lmd.py  train_model.py
src/sonata/: __init__.py  notebook_utils.py
src/sonata/config/: __init__.py  settings.py
src/sonata/data/: __init__.py  analyzer.py  jsymbolic_wrapper.py  linker.py  semantic_analyzer.py
src/sonata/generation/: __init__.py  midi_writer.py  musicxml_writer.py
src/sonata/inference/: __init__.py  audio_transcriber.py  feature_extractor.py  graph_querier.py
src/sonata/kg/: __init__.py  builder.py  converter.py  queries.py  schema.py
src/sonata/models/: __init__.py  dataset.py  evaluate.py  graph_models.py  train.py
src/sonata/models/architectures/: __init__.py  classifier.py  transformer.py
tests/test_data/: test_analyzer.py
tests/test_kg/: test_kg.py
tests/test_models/: test_models.py
